tempSelectedの入れ替え場所を変更。 デザインの修正も少し。

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             <tbody id="target">
             </tbody>
         </table>
-        <button type="button" id="putBTN" disabled="disabled">おく</button>
-        <button type="button" id="passBTN" style="display:none;">パス</button>
+        <br>
+        <button type="button" id="putBTN" class="btn-square" disabled="disabled">おく</button>
+        <button type="button" id="passBTN" class="btn-square" style="display:none;">パス</button>
     </div>
 
 
